--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
     <automaton.version>1.11-8</automaton.version>
     <automaton.bundle.version>1.11-8_1</automaton.bundle.version>
     <jackson.version>2.8.11</jackson.version>
-    <jackson.databind.version>2.8.11.2</jackson.databind.version>
+    <jackson.databind.version>2.8.11.3</jackson.databind.version>
     <jackson.bundle.version>${jackson.version}</jackson.bundle.version>
     <junit.version>4.12</junit.version>
     <kubernetes.model.version>2.0.10.fuse-730011</kubernetes.model.version>
@@ -100,7 +100,7 @@
 
     <scr.annotations.version>1.9.12</scr.annotations.version>
     <sundrio.version>0.14.0</sundrio.version>
-    <validation.api.version>1.1.0.Final</validation.api.version>
+    <validation.api.version>1.1.0.Final-redhat-1</validation.api.version>
 
     <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
     <maven.buildhelper.plugin.version>1.10</maven.buildhelper.plugin.version>
