--- a/kubernetes-client/pom.xml
+++ b/kubernetes-client/pom.xml
@@ -160,6 +160,11 @@
       <version>${kubernetes.model.version}</version>
     </dependency>
     <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>${validation.api.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
       <version>${okhttp.version}</version>
