--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
     <!-- Core versions -->
     <sundrio.version>0.17.2</sundrio.version>
     <okhttp.version>3.12.6</okhttp.version>
-    <okhttp.bundle.version>3.12.0_1</okhttp.bundle.version>
+    <okhttp.bundle.version>3.12.0.1-fuse-redhat-00001</okhttp.bundle.version>
     <okio.version>1.15.0</okio.version>
     <okio.bundle.version>1.15.0_1</okio.bundle.version>
     <jackson.version>2.12.1</jackson.version>
@@ -100,7 +100,7 @@
     <conscrypt-openjdk-uber.version>1.4.2</conscrypt-openjdk-uber.version>
     <conscrypt-openjdk-uber.bundle.version>1.4.2_1</conscrypt-openjdk-uber.bundle.version>
     <generex.version>1.0.2</generex.version>
-    <generex.bundle.version>1.0.1_1</generex.bundle.version>
+    <generex.bundle.version>1.0.2.2-fuse-redhat-00001</generex.bundle.version>
     <automaton.version>1.11-8</automaton.version>
     <automaton.bundle.version>1.11-8_1</automaton.bundle.version>
     <jackson.bundle.version>${jackson.version}</jackson.bundle.version>
